--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -31,4 +31,5 @@ jobs:
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
+        github_token: ${{ secrets.TOKEN }}
         publish_dir: ./build/web
