--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/setup-java@v3.11.0
       with:
         java-version: '12.x'
+        distribution: 'temurin'
     - uses: subosito/flutter-action@v2.10.0
       with:
         channel: 'dev'
