--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3.5.2
     - uses: actions/setup-java@v3.11.0
       with:
-        java-version: '12.x'
+        java-version: '20'
         distribution: 'temurin'
     - uses: subosito/flutter-action@v2.10.0
       with:
