--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -20,9 +20,9 @@ jobs:
       with:
         java-version: '20'
         distribution: 'temurin'
-    - uses: subosito/flutter-action@v2.10.0
+    - uses: subosito/flutter-action@v1
       with:
-        channel: 'dev'
+        channel: 'beta' # 'dev', 'alpha', default to: 'stable'
     - name: 'Run flutter pub get'
       run: flutter pub get
     - name: Enable flutter web
