--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "local-history.browser.descending": false,
-    "cmake.sourceDirectory": "E:/Lango/Front/windows/flutter"
+    "local-history.browser.descending": false
 }
