--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: lango
 description: A new Flutter project.
-
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -20,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.19.4 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,22 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.4
+  google_fonts: ^4.0.3
   flutter_otp_text_field: ^1.1.1
   get: ^4.6.5
-  file_picker: ^5.3.0
-  flutter_svg: ^1.1.6
+  file_picker: ^5.2.10
+  flutter_svg: ^2.0.5
   path_drawing: ^1.0.1
-  xml: ^6.1.0
+  xml: ^6.2.2
   path_parsing: ^1.0.1
   petitparser: ^5.1.0
   convert: ^3.1.1
   scaled_list: ^2.0.0
   table_calendar: ^3.0.9
   flutter_countdown_timer: ^4.1.0
-  dio: ^5.1.2
-  shared_preferences: ^2.1.0
-  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +74,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
