--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "local-history.browser.descending": false
+    "local-history.browser.descending": false,
+    "cmake.sourceDirectory": "E:/LANGO/frontsiyavash/windows/flutter"
 }
